force-app/main/default/objects/vlocity_cmt__UserAdServer__c/vlocity_cmt__UserAdServer__c.object-meta.xml
<CustomObject>
    <description>The User Ad Server captures the mapping of a User with an Ad Server.</description>
    <label>User Ad Server</label>
    <nameField>
        <label>User Ad Server Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Ad Servers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>