force-app/main/default/objects/vlocity_cmt__UserAdServer__c/fields/vlocity_cmt__AdServerId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdServerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This captures the Ad Server to which the User is mapped.</description>
    <label>Ad Server</label>
    <referenceTo>vlocity_cmt__AdServer__c</referenceTo>
    <relationshipLabel>User Ad Servers</relationshipLabel>
    <relationshipName>UserAdServers</relationshipName>
    <type>Lookup</type>
</CustomField>