force-app/main/default/objects/vlocity_cmt__UserAdServer__c/fields/vlocity_cmt__AdServerUserIdentifier__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdServerUserIdentifier__c</fullName>
    <description>This captures the Publisher&apos;s Contact/User Id whose ID has to be sent during Order creation. This is equivalent of TraffickerId in GAM.</description>
    <externalId>true</externalId>
    <label>Ad Server User Identifier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>