force-app/main/default/objects/vlocity_cmt__UserAdServer__c/fields/vlocity_cmt__UserId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User record to which the Ad Server Mapping is created.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserAdServers</relationshipName>
    <type>Lookup</type>
</CustomField>