force-app/main/default/objects/vlocity_cmt__UserAdServer__c/listViews/vlocity_cmt__All.listView-meta.xml
<ListView>
    <fullName>vlocity_cmt__All</fullName>
    <columns>NAME</columns>
    <columns>vlocity_cmt__AdServerId__c</columns>
    <columns>vlocity_cmt__AdServerUserIdentifier__c</columns>
    <columns>vlocity_cmt__UserId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>